# vectovid

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  clippy.toml  index.html  packer.js  player.html  player.js  rustfmt.toml
.github/workflows/: ci.yml  library.yml  release.yml  web.yml  windows.yml
.github/workflows/publish/: library.yml
core/: Cargo.toml
core/js/: packer.js  player.js
core/src/: lib.rs
desktop/: Cargo.toml
desktop/src/: main.rs
web/: example_wasm.html  example_wasm.js  jszip.min.js  packer.js  player.js  style.css
